Passing tests in HvdcDetailedConverterTest - testCreate1 - testCreate2
Signed-off-by: Landry Huet <landry.huet@supergrid-institute.com>